check all funcs
